Bug 163347 - UI: Options - Charts - Default Colors: Chart Colors and Color Table do not represent actual value
Summary: UI: Options - Charts - Default Colors: Chart Colors and Color Table do not re...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:26...
Keywords: regression
: 164674 (view as bug list)
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2024-10-08 15:40 UTC by Michael Otto
Modified: 2025-12-16 17:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc ods example file with chart od 4 data series (25.10 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-11-07 11:18 UTC, Michael Otto
Details
screen after 1st step (72.22 KB, image/png)
2024-11-07 11:20 UTC, Michael Otto
Details
screen after 2nd step (73.06 KB, image/png)
2024-11-07 11:22 UTC, Michael Otto
Details
screen after 3rd step (70.90 KB, image/png)
2024-11-07 11:23 UTC, Michael Otto
Details
screen after 4th step (74.80 KB, image/png)
2024-11-07 11:25 UTC, Michael Otto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Otto 2024-10-08 15:40:43 UTC
PRECONDITION:
insert any Chart and select it for Edit
open Options > Charts > Default Colors

PROBLEM DESCRIPTION:
click on Data Series 1
click on a red color in the Color Table 
--> the red color is framed and red is assigned to the Data Series 1 (OK)

click on Data Series 2 
--> still the red color selected for Data Series 1 is framed (not OK) (but of course not assigned to the Data Series 2: OK)

click on Data Series 3
click on a blue color in the Color Table 
--> the blue color is framed, blue is assigned to the Data Series 3 (OK)

click again on Data Series 1
--> still the blue color is framed, although blue has not been assigned to the Data Series 1 (not OK)

EXPECTED BEHAVIOUR:
either the Chart Colors or or the Color Table shall show the actual value


Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 Aryeh 2024-11-06 23:05:11 UTC
I was not able to reproduce the bug as you mentioned. Can you provide screenshots?

Version: 25.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: dd1870369618b2f1fcc7faa9c8e217e556e56c1a
CPU threads: 8; OS: macOS 14.5; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Michael Otto 2024-11-07 11:18:02 UTC
Created attachment 197473 [details]
Calc ods example file with chart od 4 data series

Data Series 1 ('Lina') is blue at the beginning
Data Series 2 ('Hans') is red at the beginning
Data Series 3 ('Maria') is yellow at the beginning
Data Series 4 ('Jakob') is green at the beginning
Comment 3 Michael Otto 2024-11-07 11:20:34 UTC
Created attachment 197474 [details]
screen after 1st step

Data Series 1 and click on a red color.png shows screen after 1st step:
> click on Data Series 1
> click on a red color in the Color Table 
> --> the red color is framed and red is assigned to the Data Series 1 (OK)
Comment 4 Michael Otto 2024-11-07 11:22:17 UTC
Created attachment 197475 [details]
screen after 2nd step

Data Series 2 still red color selected.png shows screen after 2nd step:
> --> still the red color selected for Data Series 1 is framed (not OK) (but of > course not assigned to the Data Series 2: OK)
Comment 5 Michael Otto 2024-11-07 11:23:28 UTC
Created attachment 197476 [details]
screen after 3rd step

Data Series 3 click on blue.png shows screen after 3rd step:
click on a blue color in the Color Table 
--> the blue color is framed, blue is assigned to the Data Series 3 (OK)
Comment 6 Michael Otto 2024-11-07 11:25:42 UTC
Created attachment 197477 [details]
screen after 4th step

again Data Series 1 still blue.png shows screen after 4th step:
> --> still the blue color is framed, although blue has not been assigned to the Data Series 1 (not OK)
Comment 7 Buovjaga 2025-03-04 15:56:40 UTC
Bibisected with linux-64-6.3 to 82df20eeb8f071aaf3780b111aaa27fbc1b2dc9a
tdf#105225 Add palette selection to options charts default colors

Probably we should call it an implementation error.

(When testing the example file is not needed, you can just focus on the option)
Comment 8 Jim Raykowski 2025-03-06 06:41:40 UTC
I bibisect that the color column went away for gtk3 in this patch:
commit 7eb0e13c6547f00bc139d817ef53350c99e3eb2e 

gen and qt VCL backends still have the color column.

Here is a link to a patch that returns the color column for gtk3:
https://gerrit.libreoffice.org/c/core/+/182551
Comment 9 Buovjaga 2025-03-06 07:47:04 UTC
(In reply to Jim Raykowski from comment #8)
> I bibisect that the color column went away for gtk3 in this patch:
> commit 7eb0e13c6547f00bc139d817ef53350c99e3eb2e 
> 
> gen and qt VCL backends still have the color column.
> 
> Here is a link to a patch that returns the color column for gtk3:
> https://gerrit.libreoffice.org/c/core/+/182551

Ah, I did not even notice that different issue. So what Jim is tackling with the above patch is the "Chart Colors" list in the "Default Colors" options pane not showing the color preview boxes in the gtk3 UI. I confirm the patch fixes that particular issue.
Comment 10 Commit Notification 2025-03-06 07:54:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c7593e0366cb7705234960d555a451e27753725

tdf#163347 Restore options chart colors page color column for gtk3

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-03-06 10:06:07 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5a80176b0f5c9ddcab95450714e8eea648d69066

tdf#163347 Restore options chart colors page color column for gtk3

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Buovjaga 2025-10-26 19:13:14 UTC
*** Bug 164674 has been marked as a duplicate of this bug. ***
Comment 13 Michael Otto 2025-10-27 11:37:49 UTC
> tdf#163347 Restore options chart colors page color column for gtk3

indeed in 25.8.2 there is a color column in the Chart Colors
which reflects the correct color
(IMHO this is enough, the color in the Color Table need not to be marked)

Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 14 Buovjaga 2025-10-27 14:23:28 UTC
(In reply to Michael Otto from comment #13)
> > tdf#163347 Restore options chart colors page color column for gtk3
> 
> indeed in 25.8.2 there is a color column in the Chart Colors
> which reflects the correct color
> (IMHO this is enough, the color in the Color Table need not to be marked)

It would still be optimal to have the colour in the table be synced to what is selected in the list.
Comment 15 Jim Raykowski 2025-11-03 21:29:02 UTC
(In reply to Buovjaga from comment #14)
> It would still be optimal to have the colour in the table be synced to what
> is selected in the list.
I've worked up a patch that does this. Should we file it under this bug report or a separate enhancement request?
Comment 16 Buovjaga 2025-11-04 07:07:14 UTC
(In reply to Jim Raykowski from comment #15)
> (In reply to Buovjaga from comment #14)
> > It would still be optimal to have the colour in the table be synced to what
> > is selected in the list.
> I've worked up a patch that does this. Should we file it under this bug
> report or a separate enhancement request?

This report is fine. Thanks for your work :)
Comment 17 Lars 2025-11-04 07:36:39 UTC
Thank you for help...
Comment 18 Buovjaga 2025-11-04 07:37:35 UTC
(In reply to Lars from comment #17)
> Thank you for help...

Lars: typically you should let the fixer close as fixed, so it shows up correctly in various statistics.
Comment 19 Jim Raykowski 2025-11-05 04:49:10 UTC
Link to a related patch that makes the colour in the table be synced to what is selected in the list:

https://gerrit.libreoffice.org/c/core/+/193437

Link to a patch related to the above related patch that makes the color table in the Area and Background Color tab pages sync with the active color when the tab page is shown:

https://gerrit.libreoffice.org/c/core/+/193438/1
Comment 20 Commit Notification 2025-11-09 16:01:27 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe8dad3b7ea1e30312ba25ca328f2fc3f063979e

related tdf#163347: Sync colour table to chart colors list selection

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2025-11-09 16:02:30 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/676892af95079d00c19527b94396aacf4136bf0d

related tdf#163347: sync color table with active color

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Buovjaga 2025-12-08 07:50:53 UTC
Lars: please don't change things in the bug meta data, if you are not sure what you are doing. Thanks.
Comment 23 Commit Notification 2025-12-11 15:39:09 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c836d8722a032ebc586a709659dffb15cbf84a6

related tdf#163347 Improve sync color table to chart colors list

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Michael Otto 2025-12-12 11:15:36 UTC
(In reply to Commit Notification from comment #23)
> Jim Raykowski committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 7c836d8722a032ebc586a709659dffb15cbf84a6
...
> 
> Affected users are encouraged to test the fix and report feedback.

thanks!
now both the Chart Colors and the Color Table show the actual value

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: b9d6213d04c84b8d514be597d8c876caf9c48be9
CPU threads: 5; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 25 Commit Notification 2025-12-16 15:49:12 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b89190783eca21c16b4406e5d825c4bc51ecad84

related tdf#163347 Improve sync color table to chart colors list

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Lars 2025-12-16 16:01:14 UTC
Vielen Dank für die arbeit und unterstützung