cui/source/options/optchart.hxx
@@ -52,6 +52,7 @@ private:
     DECL_LINK(RemoveChartColor, weld::Button&, void);
     DECL_LINK(BoxClickedHdl, ValueSet*, void);
     DECL_LINK(SelectPaletteLbHdl, weld::ComboBox&, void);
+    DECL_LINK(LbChartColorsSelectionChangedHdl, weld::TreeView&, void);
 
     void FillPaletteLB();
 
